appId: com.qazandoqafood
---
- launchApp

- waitForAnimationToEnd
- takeScreenshot: "abriu-o-app"

- tapOn:
    id: email
- assertVisible: E-mail
- inputText: teste@teste.com
- tapOn:
    id: password
- assertVisible: Senha
- inputText: 123456
- tapOn:
    id: login-button
- scrollUntilVisible:
    element: "Shushi Home"
    direction: DOWN 